scrollbar problem solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -117,7 +117,7 @@ main {
 }
 .features-content {
   width: 586px;
-  padding: 30px;
+  /* padding: 30px; */
 }
 .features-img img {
   width: 100%;
@@ -152,9 +152,9 @@ main {
   margin: 0;
 }
 /* facts section style  */
-.facts {
+/* .facts {
   padding: 20px;
-}
+} */
 .facts-card-container {
   display: flex;
   justify-content: space-evenly;
